--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -864,4 +864,10 @@
 	<string name="txt_question_back">"'뒤로'버튼을 한번 더  누르시면 문의하기를 종료합니다."</string>
     <!--Activity_Question-->
     
+    
+    <string name="txt_inapp_alert_ment">"성경앱 내 모든광고가 없는 버전을 이용하시겠어요?\n※결제시 과금청구"</string>
+    <string name="txt_inapp_alert_title">"광고제거"</string>
+    <string name="txt_inapp_alert_yes">"광고제거"</string>
+    <string name="txt_inapp_alert_no">"무시하기"</string>
+    
 </resources>
