--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="txt_menu_bottom4">Pre</string>
     <string name="txt_menu_bottom5">Next</string>
     <string name="txt_menu_bottom6">Search</string>
-    <string name="txt_menu_bottom7">Donate</string>
+    <string name="txt_menu_bottom7">""</string>
     <string name="txt_menu_bottom8">Setting</string>
     
     <string name="txt_menu_top1">Old</string>
