--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -43,7 +43,7 @@
     <string name="txt_menu_bottom4">이전</string>
     <string name="txt_menu_bottom5">다음</string>
     <string name="txt_menu_bottom6">검색</string>
-    <string name="txt_menu_bottom7">후원</string>
+    <string name="txt_menu_bottom7">""</string>
     <string name="txt_menu_bottom8">설정</string>
     
     <string name="txt_menu_top1">구약</string>
@@ -865,9 +865,9 @@
     <!--Activity_Question-->
     
     
-    <string name="txt_inapp_alert_ment">"성경앱 내 모든광고가 없는 버전을 이용하시겠어요?\n※결제시 과금청구"</string>
+    <string name="txt_inapp_alert_ment">"성경앱 내 모든광고가 없는 유료버전으로 전환하시겠어요?\n-무료체험3일 체험 프로모션기간-\n※결제시 월정액 과금 청구되오니 착오없이 선택해주세요.\n결제 완료 후 앱을 재실행하시면 모든광고가 제거됩니다 "</string>
     <string name="txt_inapp_alert_title">"광고제거"</string>
     <string name="txt_inapp_alert_yes">"광고제거"</string>
-    <string name="txt_inapp_alert_no">"무시하기"</string>
+    <string name="txt_inapp_alert_no">"취소하기"</string>
     
 </resources>
